Removed links in form tables

--- a/openatlas/templates/forms/checkbox_table.html
+++ b/openatlas/templates/forms/checkbox_table.html
@@ -2,5 +2,4 @@
     type="checkbox"
     id="{{ entity.id }}"
     {% if field.data and entity.id in field.data %} checked {% endif %}
-    value="{{ entity.name }}"
-    class="multi-table-select">
+    value="{{ entity.name }}">
