--- a/openatlas/templates/forms/form_table.html
+++ b/openatlas/templates/forms/form_table.html
@@ -4,7 +4,7 @@
     {{ table }}
     <input
         id="save"
-        class="{{ config['CSS']['button']['primary'] }}"
+        class="{{ config.CSS.button.primary }}"
         name="save"
         type="submit"
         value="{{ _('link')|uc_first }}">
