--- a/openatlas/templates/login/index.html
+++ b/openatlas/templates/login/index.html
@@ -16,7 +16,7 @@
     {% endif %}
     <p>
         <a
-          class="{{ config['CSS']['button']['primary'] }}"
+          class="{{ config.CSS.button.primary }}"
           href="/static/manual/troubleshooting/login.html"
           target="_blank"
           rel="noopener noreferrer">
