--- a/openatlas/templates/user/note.html
+++ b/openatlas/templates/user/note.html
@@ -8,7 +8,7 @@
             </div>
             <h1>{{ _('note')|uc_first }}</h1>
             <div>
-                {{ note['text'] }}
+                {{ note.text }}
             </div>
         </div>
     </div>
