--- a/openatlas/templates/admin/newsletter.html
+++ b/openatlas/templates/admin/newsletter.html
@@ -5,7 +5,7 @@
         <div style="float:left;">
             {{ form.subject(class_="required") }}<br><br>
             {{ form.body(class_="required") }}<br>
-            {{ form.save(class_=config['CSS']['button']['primary']) }}
+            {{ form.save(class_=config.CSS.button.primary) }}
         </div>
         <div style="float:left;margin-left:1em;">
             {{ table.display() }}
