--- a/openatlas/templates/forms/tree_multi_select.html
+++ b/openatlas/templates/forms/tree_multi_select.html
@@ -1,6 +1,6 @@
 <span
     id="{{ field.id }}-button"
-    class="{{ config['CSS']['button']['secondary'] }}"
+    class="{{ config.CSS.button.secondary }}"
     onclick="$('#{{ field.id }}-modal').modal('show')">
         {{ _('change')|uc_first }}
 </span>
@@ -19,7 +19,7 @@
                 <h5 class="modal-title">{{ root.name|uc_first }}</h5>
                 <button
                     type="button"
-                    class="{{ config['CSS']['button']['primary'] }}"
+                    class="{{ config.CSS.button.primary }}"
                     data-dismiss="modal"
                     aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -36,7 +36,7 @@
             <div class="modal-footer">
                 <button
                     type="button"
-                    class="{{ config['CSS']['button']['primary'] }}"
+                    class="{{ config.CSS.button.primary }}"
                     data-dismiss="modal"
                     onclick="selectFromTreeMulti({{ field.id }})">
                         {{ _('close')|uc_first }}
