Refatctor util.py, moving HTML to templates

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -120,7 +120,7 @@ div.preview img {
     max-width: 400px;
 }
 
-#profile_image_div {
+#profile-image-div {
      float: left;
      margin-right: 1em;
 }
