--- a/openatlas/templates/entity/update.html
+++ b/openatlas/templates/entity/update.html
@@ -16,9 +16,9 @@
             <div class="col-4">
                 <div id='map-info-display' style="float:left;">
                     {{ form|display_form(manual_page='entity/' + entity.class_.view) }}
-                    <div>
-                        {{ entity|display_profile_image }}
-                    </div>
+                    {% if entity.image_id %}
+                        <div>{{ entity|display_profile_image }}</div>
+                    {% endif %}
                 </div>
             </div>
             <div class="col-8">
