Fixing issues with JavaScript form field switchters

--- a/openatlas/templates/util/button.html
+++ b/openatlas/templates/util/button.html
@@ -1,9 +1,26 @@
 {% if url %}
-    <a href="{{ url }}" class="{{ config['CSS']['button'][css] }}" id="{{ id_ }}" onclick="{{ js }}">
+    <a
+        href="{{ url }}"
+        class="{{ config['CSS']['button'][css] }}"
+        {% if id_ %}
+            id="{{ id_ }}"
+        {% endif %}
+        {% if js %}
+            onclick="{{ js }}"
+        {% endif %}
+    >
         {{ label }}
     </a>
 {% else %}
-    <span class="{{ config['CSS']['button'][css] }}" id="{{ id_ }}" onclick="{{ js }}">
+    <span
+        class="{{ config['CSS']['button'][css] }}"
+        {% if id_ %}
+            id="{{ id_ }}"
+        {% endif %}
+        {% if js %}
+            onclick="{{ js }}"
+        {% endif %}
+    >
         {{ label }}
     </span>
 {% endif %}
