Fix for SQL procedd button

--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -15,7 +15,7 @@
         {{ _("I'm aware of the risk and have read the documentation.") }}
     </p>
     <div class="toolbar">
-        {{ _('proceed')|button(id_='proceed_button') }}
+        {{ _('proceed')|button(id_='proceed_button', url='#') }}
     </div>
     <script>
         $('#sql_risk_aware').change(function() {
