--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -14,7 +14,7 @@
                     </a>
                     {{ _('model')|button(url_for('model_index')) }}
                     <a class="{{ config.CSS.button.primary }}" href="{{ url_for('index', view='reference_system') }}">
-                        {{ _('reference system')|uc_first }}
+                        {{ _('reference systems')|uc_first }}
                     </a>
                 </p>
                 <p>
