--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -32,7 +32,7 @@
                                                     <input
                                                       class="tree-filter"
                                                       id="{{ node.name|sanitize }}-tree-search"
-                                                      placeholder="{{ placeholder|uc_first }}"
+                                                      placeholder="{{ _('type to search')|uc_first }}"
                                                       name="name_search"
                                                       style="width:8em;"
                                                       type="text">
