--- a/openatlas/templates/tabs.html
+++ b/openatlas/templates/tabs.html
@@ -3,28 +3,24 @@
     <div class="row">
         <div class="col-12">
             <ul class="nav nav-tabs" role="tablist">
-                {% for id_, tab in tabs.items() if id_ == 'info' or tab.buttons or tab.table.rows %}
-                    {{ id_|tab_header(active=True if loop.first else False, table=tab.table) }}
+                {% for tab in tabs.values() if tab.content or tab.buttons or tab.table.rows %}
+                    {{ tab.display_header(active=True if loop.first else False) }}
                 {% endfor %}
             </ul>
             <div class="tab-content">
-                {% for id_, tab in tabs.items() if id_ == 'info' or tab.buttons or tab.table.rows %}
-                    {% if loop.index == 1 %}
-                        <div class="tab-pane fade show active" role="tabpanel" id="tab-{{ id_ }}">
-                            {% block tab_info %}{% endblock%}
-                        </div>
-                    {% else %}
-                        <div class="tab-pane fade" role="tabpanel" id="tab-{{ id_|replace('_', '-') }}">
-                            {% if tab.buttons  %}
-                                <div class="toolbar">
-                                    {{ tab.buttons|join(' ') }}
-                                </div>
+                {% for tab in tabs.values() if tab.content or tab.buttons or tab.table.rows %}
+                    <div
+                        class="tab-pane fade {% if loop.index == 1 %}show active{% endif %}"
+                        role="tabpanel"
+                        id="tab-{{ tab.name|replace('_', '-')}}">
+                            {{ tab.buttons|button_bar }}
+                            {% if tab.content %}
+                                {{ tab.content|safe }}
                             {% endif %}
                             {% if tab.table.rows %}
-                                {{ tab.table.display(id_)|safe }}
+                                {{ tab.table.display(tab.name) }}
                             {% endif %}
-                        </div>
-                    {% endif %}
+                    </div>
                 {% endfor %}
             </div>
         </div>
