added blueprint for API

--- a/openatlas/templates/util/api_links.html
+++ b/openatlas/templates/util/api_links.html
@@ -1,7 +1,7 @@
-<a href=" {{ url_for('entity', id_=entity.id) }}" target="_blank">GeoJSON</a>
-<a class="{{ config.CSS.button.primary }}" href="{{ url_for('entity', id_=entity.id, download=True) }}">
+<a href=" {{ url_for('api.entity', id_=entity.id) }}" target="_blank">GeoJSON</a>
+<a class="{{ config.CSS.button.primary }}" href="{{ url_for('api.entity', id_=entity.id, download=True) }}">
     <i class="fas fa-download"></i> {{ _('download')|uc_first }}
 </a>
-<a class="{{ config.CSS.button.primary }}" href="{{ url_for('entity', id_=entity.id, export='csv') }}">
+<a class="{{ config.CSS.button.primary }}" href="{{ url_for('api.entity', id_=entity.id, export='csv') }}">
     <i class="fas fa-download"></i> CSV
 </a>
