--- a/openatlas/templates/entity/insert.html
+++ b/openatlas/templates/entity/insert.html
@@ -18,7 +18,7 @@
     {% else %}
         <div class="row">
             <div class="col-4">
-                <div id='map-info-display' style="float:left;">
+                <div id='map-info-display'>
                     {{ form|display_form(manual_page='entity/' + view_name) }}
                 </div>
             </div>
