--- a/openatlas/templates/entity/update.html
+++ b/openatlas/templates/entity/update.html
@@ -14,7 +14,7 @@
     {% else %}
         <div class="row">
             <div class="col-4">
-                <div id='map-info-display' style="float:left;">
+                <div id='map-info-display'>
                     {{ form|display_form(manual_page='entity/' + entity.class_.view) }}
                     {% if entity.image_id %}
                         <div>{{ entity|display_profile_image }}</div>
