form/desc resize bug #1414

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -95,7 +95,7 @@ table.dataTable th {
 }
 
 textarea {
-    resize: both;
+    resize: vertical;
 }
 
 img#logo {
@@ -286,7 +286,18 @@ label[for="description"] {
 
 #map-info-display {
     float: left;
-    width: 100%;
+    width: 95%;
+}
+
+#map-info-display-ext {
+    vertical-align: center;
+    width: 5%;
+}
+
+.extend-icon {
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
 }
 
 .overlay {
