--- a/openatlas/templates/overlay/insert.html
+++ b/openatlas/templates/overlay/insert.html
@@ -14,9 +14,14 @@
                 <div class="table-cell">{{ form.top_left_northing(class_='number') }}</div>
             </div>
             <div class="table-row">
-                <div>{{ _('bottom right')|uc_first }}</div>
-                <div class="table-cell">{{ form.bottom_right_easting(class_='number') }}</div>
-                <div class="table-cell">{{ form.bottom_right_northing(class_='number') }}</div>
+                <div>{{ _('top right')|uc_first }}</div>
+                <div class="table-cell">{{ form.top_right_easting(class_='number') }}</div>
+                <div class="table-cell">{{ form.top_right_northing(class_='number') }}</div>
+            </div>
+            <div class="table-row">
+                <div>{{ _('bottom left')|uc_first }}</div>
+                <div class="table-cell">{{ form.bottom_left_easting(class_='number') }}</div>
+                <div class="table-cell">{{ form.bottom_left_northing(class_='number') }}</div>
             </div>
         </div>
         {{ form.save(class=config.CSS.button.primary) }}
