--- a/openatlas/templates/overlay/insert.html
+++ b/openatlas/templates/overlay/insert.html
@@ -5,23 +5,23 @@
         <div class="data-table">
             <div class="table-row">
                 <div></div>
-                <div class="table-cell">{{ _('easting')|uc_first }}</div>
-                <div class="table-cell">{{ _('northing')|uc_first }}</div>
+                <div>{{ _('easting')|uc_first }}</div>
+                <div>{{ _('northing')|uc_first }}</div>
             </div>
             <div class="table-row">
                 <div>{{ _('top left')|uc_first }}</div>
-                <div class="table-cell">{{ form.top_left_easting(class_='number') }}</div>
-                <div class="table-cell">{{ form.top_left_northing(class_='number') }}</div>
+                <div>{{ form.top_left_easting(class_='number') }}</div>
+                <div>{{ form.top_left_northing(class_='number') }}</div>
             </div>
             <div class="table-row">
                 <div>{{ _('top right')|uc_first }}</div>
-                <div class="table-cell">{{ form.top_right_easting(class_='number') }}</div>
-                <div class="table-cell">{{ form.top_right_northing(class_='number') }}</div>
+                <div>{{ form.top_right_easting(class_='number') }}</div>
+                <div>{{ form.top_right_northing(class_='number') }}</div>
             </div>
             <div class="table-row">
                 <div>{{ _('bottom left')|uc_first }}</div>
-                <div class="table-cell">{{ form.bottom_left_easting(class_='number') }}</div>
-                <div class="table-cell">{{ form.bottom_left_northing(class_='number') }}</div>
+                <div>{{ form.bottom_left_easting(class_='number') }}</div>
+                <div>{{ form.bottom_left_northing(class_='number') }}</div>
             </div>
         </div>
         {{ form.save(class=config.CSS.button.primary) }}
