--- a/openatlas/templates/util/table.html
+++ b/openatlas/templates/util/table.html
@@ -10,5 +10,6 @@
         overflow();
         $('#{{ name }}_table').on('page.dt', () => overflow());
         $('#{{ name }}_table').on('search.dt', () => overflow());
+        $('input[type="search"]').focus();
     });
 </script>
