Added views for image processing actions

--- a/openatlas/templates/admin/data.html
+++ b/openatlas/templates/admin/data.html
@@ -20,6 +20,14 @@
         {% endif %}
     </div>
 {% endif %}
+{% if 'admin'|is_authorized and session.settings.image_processing %}
+    <div class="toolbar">
+        <h1>{{ _('image processing')|uc_first }}</h1>
+        {{ 'admin/file'|manual }}
+        {{ _('create resized images')|button(url_for('admin_resize_images')) }}
+        {{ _('delete orphaned resized images')|button(url_for('admin_delete_orphaned_resized_images')) }}
+    </div>
+{% endif %}
 {% if 'manager'|is_authorized %}
     <div class="toolbar">
         <h1>{{ 'API'|uc_first }}</h1>
