--- a/openatlas/templates/util/api_links.html
+++ b/openatlas/templates/util/api_links.html
@@ -1,7 +1,30 @@
-<a href=" {{ url_for('api.entity', id_=entity.id) }}" target="_blank">GeoJSON</a>
-<a class="{{ config.CSS.button.primary }}" href="{{ url_for('api.entity', id_=entity.id, download=True) }}">
-    <i class="fas fa-download"></i> {{ _('download')|uc_first }}
-</a>
-<a class="{{ config.CSS.button.primary }}" href="{{ url_for('api.entity', id_=entity.id, export='csv') }}">
-    <i class="fas fa-download"></i> CSV
-</a>
+<div class="btn-toolbar">
+    <div class="btn-group mr-2">
+        <a class="{{ config.CSS.button.primary }}"
+           href=" {{ url_for('api.entity', id_=entity.id, format='lp') }}"
+           target="_blank">
+            Linked Places
+        </a>
+        <a class="{{ config.CSS.button.primary }}"
+           href="{{ url_for('api.entity', id_=entity.id, format='lp', download=True) }}">
+            <i class="fas fa-download"></i>
+        </a>
+    </div>
+    <div class="btn-group mr-2">
+        <a class="{{ config.CSS.button.primary }}"
+           href=" {{ url_for('api.entity', id_=entity.id, format='geojson') }}"
+           target="_blank">
+            Geojson
+        </a>
+        <a class="{{ config.CSS.button.primary }}"
+           href="{{ url_for('api.entity', id_=entity.id, format='geojson', download=True) }}">
+            <i class="fas fa-download"></i>
+        </a>
+    </div>
+    <div class="btn-group mr-2">
+        <a class="{{ config.CSS.button.primary }}"
+           href="{{ url_for('api.entity', id_=entity.id, export='csv') }}">
+            <i class="fas fa-download"></i> CSV
+        </a>
+    </div>
+</div>
