--- a/openatlas/templates/util/api_links.html
+++ b/openatlas/templates/util/api_links.html
@@ -21,6 +21,36 @@
             <i class="fas fa-download"></i>
         </a>
     </div>
+
+    <div class="btn-group mr-2">
+        <a class="{{ config.CSS.button.primary }}"
+           href=" {{ url_for('api.entity', id_=entity.id, format='xml') }}"
+           target="_blank">
+            XML <i class="fas fa-download"></i>
+        </a>
+        <a class="{{ config.CSS.button.primary }}"
+           href=" {{ url_for('api.entity', id_=entity.id, format='pretty-xml') }}"
+           target="_blank">
+            Pretty-XML <i class="fas fa-download"></i>
+        </a>
+        <a class="{{ config.CSS.button.primary }}"
+           href=" {{ url_for('api.entity', id_=entity.id, format='turtle') }}"
+           target="_blank">
+            Turtle <i class="fas fa-download"></i>
+        </a>
+        <a class="{{ config.CSS.button.primary }}"
+           href=" {{ url_for('api.entity', id_=entity.id, format='n3') }}"
+           target="_blank">
+            Notion 3
+        </a>
+
+        <a class="{{ config.CSS.button.primary }}"
+           href=" {{ url_for('api.entity', id_=entity.id, format='nt') }}"
+           target="_blank">
+            N-Triples
+        </a>
+    </div>
+
     <div class="btn-group mr-2">
         <a class="{{ config.CSS.button.primary }}"
            href="{{ url_for('api.entity', id_=entity.id, export='csv') }}">
