--- a/openatlas/templates/entity/insert.html
+++ b/openatlas/templates/entity/insert.html
@@ -17,21 +17,22 @@
         {% endif %}
     {% else %}
         <div class="row">
-            <div class="col-4">
+            <div class="col-xl-4">
                 <div class="row">
                     <div id='map-info-display' style="float:left;">
                         {{ form|display_form(manual_page='entity/' + view_name) }}
                     </div>
                     <div id="map-info-display-ext">
-                    <span class="extend-icon" id="extend-form-icon"><i class="fas fa-arrow-right"
-                                                                       title="Enlarge Form"></i></span>
-                        <span class="extend-icon" id="extend-map-icon" style="display: none;"><i
-                                class="fas fa-arrow-left "
-                                title="Enlarge Map"></i></span>
+                        <span class="extend-icon" id="extend-form-icon">
+                            <i class="fas fa-arrow-rights" title="Enlarge Form"></i>
+                        </span>
+                        <span class="extend-icon" id="extend-map-icon" style="display: none;">
+                            <i class="fas fa-arrow-left " title="Enlarge Map"></i>
+                        </span>
                     </div>
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col-xl-8">
                 <div id="map" class="map"></div>
             </div>
             <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.css">
