--- a/openatlas/templates/entity/update.html
+++ b/openatlas/templates/entity/update.html
@@ -13,7 +13,7 @@
         {{ entity.class_.view|display_citation_example }}
     {% else %}
         <div class="row">
-            <div class="col-4">
+            <div class="col-xl-4">
                 <div class="row">
                     <div id='map-info-display'>
                         {{ form|display_form(manual_page='entity/' + entity.class_.view) }}
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col-xl-8">
                 <div id="map" class="map"></div>
             </div>
             <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.css">
