Fix for map icon

--- a/openatlas/templates/entity/insert.html
+++ b/openatlas/templates/entity/insert.html
@@ -24,7 +24,7 @@
                     </div>
                     <div id="map-info-display-ext">
                         <span class="extend-icon" id="extend-form-icon">
-                            <i class="fas fa-arrow-rights" title="Enlarge Form"></i>
+                            <i class="fas fa-arrow-right" title="Enlarge Form"></i>
                         </span>
                         <span class="extend-icon" id="extend-map-icon" style="display: none;">
                             <i class="fas fa-arrow-left " title="Enlarge Map"></i>
